Storage concluído
A lógica da classe Storage foi finalizada.